--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1>My First Angular Project!!</h1>
+  <p>It feels awesome to be here :) ;)</p>
   <app-root></app-root>
 </body>
 </html>
